Added > to 3rd hyper link in header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
                 <nav>
                     <a class="header" href="#search-engine-optimization">Search Engine Optimization</a>
-                    <a class="header" href="#online-reputation-management">Online Reputation Management</a
+                    <a class="header" href="#online-reputation-management">Online Reputation Management</a>
                     <a class="header" href="#social-media-marketing">Social Media Marketing</a>
                     <!--why red...lost path/link?-->
                 </nav>
