--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="content">
       <section class="search-engine-optimization">
         <img
-          src="./assets/images/search-engine-optimization.jpg"
+          src="./assets/images/search-engine-optimization.jpg" alt="image of  a typical desk with coffee and a notebook for  notes"
           class="float-left"
         />
         <h2>Search Engine Optimization</h2>
@@ -47,7 +47,7 @@
         class="online-reputation-management"
       >
         <img
-          src="./assets/images/online-reputation-management.jpg"
+          src="./assets/images/online-reputation-management.jpg" alt="image of a laptop with the work reputation in bold letters"
           class="float-right"
         />
         <h2>Online Reputation Management</h2>
@@ -61,7 +61,7 @@
       </section>
       <section id="social-media-marketing" class="social-media-marketing">
         <img
-          src="./assets/images/social-media-marketing.jpg"
+          src="./assets/images/social-media-marketing.jpg" alt="image of a table full of colorful icons associated with social media"
           class="float-left"
         />
         <h2>Social Media Marketing</h2>
@@ -76,7 +76,7 @@
     <div class="benefits">
       <aside class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img src="./assets/images/lead-generation.png" alt="image of a gear on top of a funnel that pours money" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -84,7 +84,7 @@
       </aside>
       <aside class="benefit-brand">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img src="./assets/images/brand-awareness.png" alt="image of a head replaced with a light bulb shining" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -92,7 +92,7 @@
       </aside>
       <aside class="benefit-cost">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img src="./assets/images/cost-management.png" alt="image of a gear with money" />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
